vlib/v/checker/tests/match_mut_with_immutable_var_err.out
vlib/v/checker/tests/match_mut_with_immutable_var_err.vv:6:9: error: `i` is immutable, declare it with `mut` to make it mutable
    4 |     i := Int(0)
    5 |     match i {
    6 |         int { i = 1 }
      |               ^
    7 |         byte { i = 2 }
    8 |     }
vlib/v/checker/tests/match_mut_with_immutable_var_err.vv:7:10: error: `i` is immutable, declare it with `mut` to make it mutable
    5 |     match i {
    6 |         int { i = 1 }
    7 |         byte { i = 2 }
      |                ^
    8 |     }
    9 |     println(i)
