vlib/v/checker/tests/match_mut_with_immutable_var_err.vv
type Int = byte | int

fn main() {
	i := Int(0)
	match i {
		int { i = 1 }
		byte { i = 2 }
	}
	println(i)
}
